--- a/book_index.html
+++ b/book_index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Add book, babygirl!</h1>
+        <h1>Add a book, babygirl!</h1>
         <form id="book-form">
             <div>
                 <label for="title">Title</label>
@@ -33,6 +33,10 @@
             <div>
                 <label for="author">Author</label>
                 <input type="text" id="author" class="u-full-width">
+            </div>
+            <div>
+                <label for="isbn">ISBN</label>
+                <input type="text" id="isbn" class="u-full-width">
             </div>
             <div>
                 <label for="source">Source</label>
@@ -47,6 +51,7 @@
                 <tr>
                     <th>Title</th>
                     <th>Author</th>
+                    <th>ISBN</th>
                     <th>Source</th>
                     <th></th>
                 </tr>
@@ -54,6 +59,6 @@
             <tbody id="book-list"></tbody>
         </table>
     </div>
-    <script src="book_app.js"></script>
+    <script src="appes6.js"></script>
 </body>
 </html>
